@startuml clases_package_objetivos-v1

package modelo <<frame>>{

    package objetivos <<frame>>{

        abstract class ObjetivoTeg{
            # String colorDuenio
            + cumplioObjetivo(Teg teg): Boolean
            + setDuenio(Jugador unJugador)
            # {abstract} objetivoJugador(Teg teg): Boolean
        }

        class ObjetivoConquista{
            - Map <String,Integer> paisesPorContinente;
            - List<String> continentesAConquistar;

            + ObjetivoConquista(List<String> continentes,Map<String,Integer> paisesPorContinente): ObjetivoConquista
            - tieneTodosLosPaises(Teg teg): Boolean
            - tieneTodosLosContienetes(Teg teg): Boolean
            + objetivoJugador(Teg teg): Boolean
        }

        class ObjetivoDestruccion{
            - List<Jugador> jugadores;
            - Jugador jugadorADestruir;

            + ObjetivoDestruccion(String colorADestruir,List<Jugador> jugadoresEnOrden): ObjetivoDestruccion
            + setDuenio(Jugador unJugador)
            # boolean objetivoJugador(Teg teg)

        }

        class Objetivos{
            + {static} objetivosConquista(String pathArchivo) : List<ObjetivoTeg>
            + {static}  objetivososDestruccion(List<Jugador> jugadoresEnOrden): List<ObjetivoTeg>
        }

        ObjetivoTeg <|-- ObjetivoDestruccion
        ObjetivoTeg <|-- ObjetivoConquista
        ObjetivoConquista <.. Objetivos: <<creates>>
        ObjetivoDestruccion <.. Objetivos: <<creates>>

    }

    Jugador --> ObjetivoTeg
    Teg -right-> Jugador
    Teg --> ObjetivoTeg
    Teg ..> Objetivos
}
@enduml